examples/test/testpolicy14351.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14351
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key27: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value22
          key24: value22
      podSelector:
        matchLabels:
          key7: value38
          key1: value36
          key9: value38
